# EvilCam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  customize.sh  gradle.properties  gradlew  module.prop  package-lock.json  post-fs-data.sh  service.sh  system.prop  uninstall.sh
.github/workflows/: build.yml
jni/include/: camera_hook.hpp  detection_bypass.hpp  strengther.hpp  zygisk.hpp
jni/src/: camera_hook.cpp  detection_bypass.cpp  main.cpp  strengthner.cpp
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/include/: camera_hook.h  detection_bypass.h  zygisk.h
src/main/cpp/src/: camera_hook.cpp  detection_bypass.cpp  main.cpp
webroot/: index.html  script.js  style.css
webui/: api.php  index.html  script.js  style.css  webui.prop
